--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/mdx": "^2.0.13",
     "fast-glob": "^3.3.3",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
