feat: adopt next-mdx-remote, enhance MDX UX, SEO, and docs; remove Contentlayer
- refactor(content): drop Contentlayer and compile MDX server-side via next-mdx-remote (RSC)
- feat(mdx): add MDXImage component; support  in MDX; enhance external link policy (nofollow noopener noreferrer external)
- feat(blog): show reading time and featured images on index and article pages (minimal “· X min” on cards)
- feat(seo): use ogImage/featuredImage for OpenGraph/Twitter with absolute URLs
- feat(feeds): add sitemap and RSS generated from filesystem posts
- feat(cli): extend new-article prompts (excerpt, tags, featuredImage) with proper YAML quoting
- chore(ci): auto-set SITE_URL in GitHub Actions (with override via Actions Variables/Secrets)
- docs: expand README (prereqs, scripts, MDX links/images, routes, deployment, CSP note); update AGENTS.md to remove mdx-imports workflow
- chore(deps): add next-mdx-remote, zod, concurrently, chokidar-cli; remove contentlayer/next-contentlayer
- chore(scripts): add dev:watch (optional MDX change notifications)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -152,6 +152,15 @@ jobs:
           fi
           echo "NEXT_PUBLIC_BASE_PATH=$NEXT_PUBLIC_BASE_PATH" >> $GITHUB_ENV
 
+          # Derive SITE_URL if not provided via Actions Variables/Secrets
+          DEFAULT_ORIGIN="https://${{ github.repository_owner }}.github.io"
+          # Prefer Actions Variable, then Secret, else default to owner GitHub Pages origin
+          SITE_URL_INPUT='${{ vars.SITE_URL }}'
+          if [ -z "$SITE_URL_INPUT" ]; then SITE_URL_INPUT='${{ secrets.SITE_URL }}'; fi
+          if [ -z "$SITE_URL_INPUT" ]; then SITE_URL_INPUT="$DEFAULT_ORIGIN"; fi
+          export SITE_URL="$SITE_URL_INPUT"
+          echo "SITE_URL=$SITE_URL" >> $GITHUB_ENV
+
       - name: Build static site
         run: npm run build
 
