--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "new-article": "node scripts/new-article.js",
+    "watch:content": "chokidar \"content/articles/**/*.mdx\" -c \"echo [content] change detected\"",
+    "dev:watch": "concurrently -k -n dev,content -c green,cyan \"next dev\" \"npm:watch:content\""
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.0",
@@ -22,7 +25,8 @@
     "react-dom": "19.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "next-mdx-remote": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -35,6 +39,9 @@
     "eslint-config-next": "15.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
-    "typescript": "^5"
+    "typescript": "^5",
+    "concurrently": "^9.1.0",
+    "chokidar-cli": "^3.0.0",
+    "zod": "^3.23.8"
   }
 }
