--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "typecheck": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "new-article": "node scripts/new-article.js",
     "watch:content": "chokidar \"content/articles/**/*.mdx\" -c \"echo [content] change detected\"",
     "dev:watch": "concurrently -k -n dev,content -c green,cyan \"next dev\" \"npm:watch:content\""
@@ -21,27 +23,34 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
+    "next-mdx-remote": "^5.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
-    "next-mdx-remote": "^5.0.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "chokidar-cli": "^3.0.0",
+    "concurrently": "^9.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "typescript": "^5",
-    "concurrently": "^9.1.0",
-    "chokidar-cli": "^3.0.0",
-    "zod": "^3.23.8"
+    "whatwg-url": "^14.0.0"
   }
 }
