--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "new-article": "node scripts/new-article.js",
+    "article-enrichment": "node scripts/article-enrichment.js",
     "watch:content": "chokidar \"content/articles/**/*.mdx\" -c \"echo [content] change detected\"",
     "dev:watch": "concurrently -k -n dev,content -c green,cyan \"next dev\" \"npm:watch:content\""
   },
@@ -24,6 +25,7 @@
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "next-mdx-remote": "^5.0.0",
+    "openai": "^5.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rehype-autolink-headings": "^7.1.0",
